<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TutorHomePage"
    android:orientation="vertical">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_vertical">

        <Button
            android:id="@+id/logOffBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Logoff" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:text="Teaching Topics"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="24dp" />

        <Button
            android:id="@+id/editProfileBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="View/Edit Profile " />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <ListView
            android:id="@+id/listViewTopics"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:dividerHeight="4dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/addTopicBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Add Topic" />

            <Button
                android:id="@+id/purchaseBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="View Purchase Topic" />

        </LinearLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>